public abstract class animal
{
    public abstract String makesound ();
    public abstract String eat ();


}