public interface runnable
{
    public void run();
}
